fix modal overflow cutoff issue

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -90,7 +90,7 @@ table tbody tr td label {
   top: 0;
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow: scroll;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
